tests/sksl/errors/ArrayConstructorElementCount.glsl
### Compilation failed:

error: 3: invalid arguments to 'float[2]' constructor (expected 2 elements, but found 0)
error: 4: invalid arguments to 'float[2]' constructor (expected 2 elements, but found 1)
error: 6: invalid arguments to 'float[2]' constructor (expected 2 elements, but found 3)
3 errors
